stderr
JudgeMan.java:124: error: incompatible types: String cannot be converted to boolean
            return "Flush";
                   ^
JudgeMan.java:126: error: incompatible types: String cannot be converted to boolean
        return "うんにょす";
               ^
2 errors
